--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,5 +71,17 @@ header {
     background-image: url('../images/bg.jpg');
     background-size: cover;
     background-position: bottom;
+    overflow: hidden;
 }
 
+.banner .sliders{
+    height: 100%;
+    width: 1000vw;
+}
+
+.banner .slide{
+    height: 100%;
+    width: 100vw;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.8);
+}
