--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,22 +243,106 @@ a.button {
 .section-service {
     flex: 1;
     text-align: center;
-    border-right: 1px solid #333; 
+    border-right: 1px solid #333;
     padding: 15px;
 }
 
 .section-service:first-child {
-    border-left: 1px solid #333; 
+    border-left: 1px solid #333;
 }
 
 
-.section-service h4{
+.section-service h4 {
     margin-top: 20px;
     font-size: 18px;
 }
 
-.section-service p{
+.section-service p {
     margin-top: 10px;
     font-size: 13px;
     color: #999;
+}
+
+.section-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-projects-filters{
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.section-projects-filters ul,
+.section-projects-filters li{
+    list-style: none;
+}
+
+.section-projects-filters li{
+    display: inline-block;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 13px;
+    border-left: 1px solid #ccc;
+    color: #555;
+    border-bottom: 3px solid #eee;
+    cursor: pointer;
+}
+
+.section-projects-filters li.actived,
+.section-projects-filters li:hover{
+    border-bottom: 3px solid #b28756;
+}
+
+.section-projects-filters li:first-child{
+    border-left: 0;
+}
+
+.section-projects-photos{
+    max-width: 1140px;
+    width: 100vw;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.section-projects-photo{
+    width: 280px;
+}
+
+.section-projects-photo-area{
+    margin: 10px;
+    width: 260px;
+    height: 160px;
+}
+
+.section-projects-photo-area img{
+    width: inherit;
+    height: inherit;
+}
+
+.section-projects-photo-area:hover .section-projects-photo-information{
+    display: flex;
+}
+
+.section-projects-photo-information{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: inherit;
+    height: inherit;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
+.section-projects-photo-information h5{
+    font-size: 18px;
+    font-weight: 400;
 }
