content section companies

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,3 +518,17 @@ a.button {
 .section-testimonials .pointer:hover {
     background-color:#B28756;
 }
+
+.section-companies {
+    border-top:1px solid #DDD;
+    border-bottom:1px solid #DDD;
+}
+.section-companies--area {
+    display:flex;
+    align-items:center;
+    padding: 30px;
+}
+.section-company {
+    flex:1;
+    text-align:center;
+}
