--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,6 @@ a.button {
 }
 
 .defaut {
-    background-color: red;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -526,9 +525,40 @@ a.button {
 .section-companies--area {
     display:flex;
     align-items:center;
-    padding: 30px;
 }
 .section-company {
     flex:1;
     text-align:center;
+}
+
+.section-price {
+    display:flex;
+}
+.section-price--item {
+    flex:1;
+    background-color: #FFF;
+    margin-right: 20px;
+    padding:20px;
+    text-align:center;
+}
+.section-price--item:last-child {
+    margin-right:0;
+}
+.section-price--item-name {
+    text-transform: uppercase;
+    font-size:13px;
+    font-weight:600;
+}
+.section-price--item-money {
+    font-weight: bold;
+    font-size:22px;
+    margin-top:10px;
+}
+.section-price--item-period {
+    color:#999;
+    text-transform: uppercase;
+    margin-bottom:20px;
+}
+.section-price--item-point {
+    font-size:12px;
 }
